--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ArmorX Size Calculator</title>
-  <link rel="stylesheet" href="./style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>ArmorX Size and Value Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- Logo Section -->
-<div class="container">
-    <div class="logo">
-        <img src="https://i.postimg.cc/Ls8tJXFk/ARMORX-Logo.png" alt="ArmorX Logo">
+    <div class="container">
+        <!-- Logo Section -->
+        <div class="logo">
+            <img src="https://i.postimg.cc/Ls8tJXFk/ARMORX-Logo.png" alt="ArmorX Logo">
+        </div>
+
+        <!-- Title Section -->
+        <h2>ArmorX Size and Value Calculator</h2>
+
+        <!-- Form Section -->
+        <label for="unit">Select Unit:</label>
+        <select id="unit">
+            <option value="Cm">Cm</option>
+            <option value="Inch">Inch</option>
+            <option value="Feet">Feet</option>
+        </select>
+
+        <label for="height">Height (H):</label>
+        <input type="number" id="height" placeholder="Enter height" min="1">
+
+        <label for="length">Length (L):</label>
+        <input type="number" id="length" placeholder="Enter length" min="1">
+
+        <button onclick="calculate()">Calculate</button>
+
+        <!-- Results Section -->
+        <div id="results">
+            <p id="resultArea">Area: </p>
+            <p id="resultSize">Size: </p>
+            <p id="resultLink"></p>
+        </div>
     </div>
-    <h2>ArmorX Size and Value Calculator</h2>
-
-    <!-- Form Section -->
-    <label for="unit">Select Unit:</label>
-    <select id="unit">
-        <option value="Cm">Cm</option>
-        <option value="Inch">Inch</option>
-        <option value="Feet">Feet</option>
-    </select>
-
-    <label for="height">Height (H):</label>
-    <input type="number" id="height" placeholder="Enter height">
-
-    <label for="length">Length (L):</label>
-    <input type="number" id="length" placeholder="Enter length">
-
-    <button onclick="calculate()">Calculate</button>
-
-    <!-- Results Section -->
-    <div id="results">
-        <p id="resultArea">Area: </p>
-        <p id="resultSize">Size: </p>
-        <p id="resultLink"></p>
-    </div>
-</div>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
