Update index.html New Fucntion

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
         <!-- Results Section -->
         <div id="results">
-            <p id="resultArea">Area: </p>
-            <p id="resultSize">Size: </p>
-            <p id="resultLink"></p>
-        </div>
+    <p id="convertedHeight"></p>
+    <p id="convertedLength"></p>
+    <p id="resultArea">Area: </p>
+    <p id="resultSize">Size: </p>
+    <p id="resultLink"></p>
+</div>
     </div>
     <script src="script.js"></script>
 </body>
