--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <!-- Title Section -->
-        <h2>ArmorX Size and Value Calculator</h2>
+        <h2>ArmorX Custom Window Size Calculator</h2>
 
         <!-- Form Section -->
         <label for="unit">Select Unit:</label>
