--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="height">Height (H):</label>
         <input type="number" id="height" placeholder="Enter height" min="1">
 
-        <label for="length">Length (L):</label>
+        <label for="length">Width (W):</label>
         <input type="number" id="length" placeholder="Enter length" min="1">
 
         <button onclick="calculate()">Calculate</button>
