--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <input type="number" id="height" placeholder="Enter height" min="1">
 
         <label for="length">Width (W):</label>
-        <input type="number" id="length" placeholder="Enter length" min="1">
+        <input type="number" id="length" placeholder="Enter width" min="1">
 
         <button onclick="calculate()">Calculate</button>
 
